Overflow yata console, wrap correctly; fixes #40

--- a/css/kunai/site/layout.css
+++ b/css/kunai/site/layout.css
@@ -168,6 +168,7 @@ main {
 
   div[itemtype="http://schema.org/Article"] {
     z-index: $content-z;
+    overflow: hidden;
     // overflow-y: scroll;
   }
 }
